src/index.css
/* ... */
.header__logo {
  font-weight: 700;
  font-size: 22px;
  text-decoration: none;
  color: #000;
}
.header__menu {
  flex: 1 1 auto;
  display: flex;
}

.header__buttons {
  display: flex;
  gap: 0.5rem;
}

.buttons-header__login {
  background-color: #fff;
  color: #000;
  display: block;
  font-size: 10px;
  font-weight: 800;
  text-transform: uppercase;
  line-height: 12px;
  letter-spacing: 1px;
  border: 1px solid #000;
  padding: 14px 30px;
  border-radius: 22px;
  transition: background-color 0.3s ease 0s;
}

.buttons-header__login:hover {
  background-color: rgb(215, 35, 215);
  color: #fff;
}

.menu {
  display: flex;
  justify-content: center;
  /* padding: 0px 40px 0px 0px; */
}
.menu__list {
  display: flex;
}
.menu__item {
  margin: 0px 0px 0px 30px;
}
.menu__link {
  /* font-family: "Roboto Mono", sans-serif; */
  font-weight: 700;
  font-size: 10px;
  line-height: 1.2;
  text-transform: uppercase;
  color: #000;
  letter-spacing: 1px;
  text-decoration: none;
}

.menu__link:hover {
  color: rgb(215, 35, 215);
}

.button {
  display: block;
  font-size: 10px;
  font-weight: 800;
  text-transform: uppercase;
  line-height: 12px;
  letter-spacing: 1px;
  color: #fcfdfe;
  padding: 14px 30px;
  border-radius: 22px;
  background-color: #000;
  transition: background-color 0.3s ease 0s;
  cursor: pointer;
}

.button:hover {
  background-color: rgb(215, 35, 215);
}

/* ======================== */
/* ===HEADER RESPONSIVE=== */
/* ======================== */

/* -----burger menu----- */

.toggle {
  display: none;
}

.userAuth-textblock__burger-welcome {
  display: none;
}

/* -----------------------*/

@media (max-width: 991.98px) {
  [class*="__container"] {
    /* max-width: 750px; */
    max-width: 850px;
  }

  .header__logo {
    font-weight: 500;
    font-size: 18px;
    /* padding: 0 12px; */
  }

  .menu {
    padding: 0 22px;
  }

  .menu__list {
    display: flex;
    gap: 1rem;
  }

  .menu__item {
    margin: 0;
  }

  .button {
    padding: 12px 24px;
  }

  .buttons-header__login {
    padding: 12px 24px;
  }
}

@media (max-width: 767.98px) {
  /* showing burger menu  */

  .header {
    position: fixed;
    width: 100%;
    background-color: #fff;
    z-index: 9;
  }

  .header__container {
    min-height: 55px;
  }

  .toggle {
    display: flex;
    position: relative;
    flex: 0 0 30px; /* ширина */
    height: 28px;
    flex-direction: column;
    justify-content: space-between;
    margin: 0px 0px 0px 20px;
  }

  .menu__body {
    position: fixed;
    top: 0;
    left: -100%; /* ховаємо бургер до того як буде клік на бургер */
    width: 100%;
    /* width: 50%; */
    height: 100%;
    overflow: auto; /* якщо буде більше пунктів в меню щоб був скрол */
    /* background-color: #4285f4; */
    background-color: #fff;
    padding: 90px 15px 30px 15px;
    transition: left 0.3s ease 0s; /* меню буде виїжати зліва */
  }

  .menu__body.show-menu {
    left: 0;
  }

  .menu__list {
    flex-direction: column;
    justify-content: center;
    align-items: center;
  }

  .menu__link {
    /* color: #fff; */
    font-size: 20px;
  }

  .menu__item {
    margin: 0px 0px 25px 0px;
  }

  .menu__item:last-child {
    margin-bottom: 0; /* забираємо відступ внизу в останнього елементу */
  }

  /* hide input */

  .search-bar-allMentors-page__input {
    /*  z-index: -9; */
  }
}

@media (max-width: 575.98px) {
  .header__container {
    padding-top: 1.5rem;
    padding-bottom: 1.5rem;
  }
  .header__logo {
    flex: 0 0 40px; /* розмір лого */
  }

  .userAuth-textblock__name {
    display: none;
  }

  .userAuth-textblock__welcome {
    display: none;
  }

  .userAuth-textblock__burger-welcome {
    display: block;
  }
}

/* ======================== */
/* ==========HERO========== */
/* ======================== */

.hero {
  margin: 24px 0;
}

.hero__container {
  display: flex;
  /* gap: 60px; */
  gap: 4rem; /* 16 * 4 = 64px */
}

.hero__textblock {
  flex: 0 1 50%;
  display: flex;
  flex-direction: column;
  gap: 3rem;
  /* padding: 18px 8px; */
  padding: 1rem 0.5rem;
}

.textblock-hero__title {
  font-size: 46px;
  font-weight: 800;
  color: #000;
}

.textblock-hero__title span {
  color: rgb(215, 35, 215);
}

.textblock-hero__subtitle {
  font-size: 18px;
  flex: 1 1 auto;
}

.textblock-hero__button {
  min-width: 176px;
  margin: 0 auto;
}

.hero__image {
  flex: 0 1 50%;
}

.hero__image img {
  display: block;
  width: 100%;
  height: 100%;
  border-radius: 18px;
}

/* ======================== */
/* =====HERO RESPONSIVE==== */
/* ======================== */

@media (max-width: 991.98px) {
  .hero__container {
    display: flex;
    gap: 2rem;
  }

  .hero__textblock {
    gap: 2rem;
  }
}

@media (max-width: 767.98px) {
  .main {
    margin: 74px 0;
  }
  .hero__container {
    display: flex;
    gap: 1.5rem;
  }

  .hero__textblock {
    gap: 1.5rem;
  }

  .textblock-hero__title {
    font-size: 36px;
    font-weight: 800;
  }

  .textblock-hero__subtitle {
    font-size: 14px;
  }
}

@media (max-width: 575.98px) {
  .hero__container {
    display: flex;
    flex-direction: column-reverse;
  }
}

/* ======================== */
/* ==========BRANDS=========*/
/* ======================== */

.brands {
  margin: 44px auto;
  /* background: rgb(240, 246, 249); */
}

.brands__title {
  text-align: center;
  font-size: 26px;
  font-weight: 500;
  color: #000;
}

.brands__list {
  margin: 22px 0 0 0;
  display: flex;
  justify-content: center;
  gap: 3rem;
}

.brands__item {
}

/* ======================== */
/* ====BRANDS RESPONSIVE=== */
/* ======================== */

@media (max-width: 991.98px) {
  .brands__list {
    margin: 22px 0 0 0;
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 1.5rem;
  }
}

@media (max-width: 767.98px) {
}

@media (max-width: 575.98px) {
}

/* ======================== */
/* =========MENTORS======== */
/* ======================== */

.mentors {
  margin: 44px auto;
}
/* ... */

